--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^3.0.0"
+  },
+  "dependencies": {
+    "vis": "^4.21.0"
   }
 }
