--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cytoscape": "^3.2.17",
     "cytoscape-dagre": "^2.2.2",
+    "dotparser": "^0.4.0",
     "vis": "^4.21.0"
   }
 }
